# micromouse-robot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  idf-requirements.txt  sdkconfig
components/: README.md
components/maze_solver/: CMakeLists.txt  README.md  idf_component.yml  maze.cpp
components/maze_solver/include/maze_solver/: cell.h  direction.h  maze.h
components/maze_solver/include/maze_solver/maze_samples/: small_8x8.h
components/misc_utils/: README.md  idf_component.yml
components/misc_utils/include/misc_utils/: angle.h  hexdump.h  physical_size.h  strongly_typed.h  typing_utils.h  unit_symbols.h  value_range.h
components/misc_utils/include/misc_utils/bits/: physical_unit.h  to_string.h  tstring.h  unit.h  unit_list.h
main/: CMakeLists.txt  Kconfig.projbuild  algorithm_api_mock.h  average_filter.h  debug_utils.h  distance_sensor.cpp  distance_sensor.h  hexdump.h  idf_component.yml  kalman_filter.cpp  kalman_filter.h  led_loop_utils.h  main.cpp  motion_model.cpp  motion_model.h  motor.cpp  motor.h  periodic_caller.cpp  periodic_caller.h  pid_controller.cpp  pid_controller.h  position.h  segment.cpp  segment.h  temp_map.h
main/unittests/: a.h  cell_test.cc  direction_test.cc  direction_utils.h  enum_adapters.h  hack.h  maze_solver_adapters.h  maze_test.cc  mem_equals.h  misc_utils_adapters.h  physical_size_test.cc  strongly_typed_test.cc  strongly_typed_utils.h  test_main.cc  type_list.h  typing_utils_test.cc  value_range_test.cc  value_range_utils.h  values.h
